--- a/src/estilos/index.css
+++ b/src/estilos/index.css
@@ -5,3 +5,19 @@ p {
 h2 {
     font-family: 'Montserrat', sans-serif;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.main {
+    width: 100%;
+    height: 100vh;
+}
+
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
